radio-api/scripts/clip-shopify-api-patch.log
  File "/home/runner/work/stashbox/stashbox/radio-api/scripts/apply_clip_shopify_api.py", line 128
    block_end = api.index('
                          ^
SyntaxError: unterminated string literal (detected at line 128)
